--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -20,41 +20,30 @@ h1 a {
 }
 
 
-/*.date {*/
-    /*color: #828282;*/
-/*}*/
+.date {
+    color: #828282;
+}
 
-/*.save {*/
-    /*float: right;*/
-/*}*/
+.save {
+    float: right;
+}
 
-/*.post-form textarea, .post-form input {*/
-    /*width: 100%;*/
-/*}*/
+.post-form textarea, .post-form input {
+    width: 100%;
+}
 
-/*.top-menu, .top-menu:hover, .top-menu:visited {*/
-    /*color: #ffffff;*/
-    /*float: right;*/
-    /*font-size: 26pt;*/
-    /*margin-right: 20px;*/
-/*}*/
+.top-menu, .top-menu:hover, .top-menu:visited {
+    color: #ffffff;
+    float: right;
+    font-size: 26pt;
+    margin-right: 20px;
+}
 
 body {
     padding-left: 5px;
     font-family: 'Yantramanav', sans-serif;
     font-size: 16px;
 }
-
-/*.post-form textarea, .post-form input {*/
-    /*width: 100%;*/
-/*}*/
-
-/*.top-menu, .top-menu:hover, .top-menu:visited {*/
-    /*color: #ffffff;*/
-    /*float: right;*/
-    /*font-size: 26pt;*/
-    /*margin-right: 20px;*/
-/*}*/
 
 .post {
     margin-bottom: 60px;
