--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,13 @@
 <body>
 
 <div class="page-header">
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% endif %}
+
     <h1><a href="/">World News Latest</a></h1>
+
 </div>
 
 <div class="content container">
