--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,12 +1,21 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+
     <div class="post">
+
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
         {% endif %}
+
         <h3>{{ post.title }}</h3>
+
+        {% if user.is_authenticated %}
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {%  endif %}
+
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
+
 {% endblock %}
